tests/errors/compiler/pointer_in_print/print_pointer.c
void main()
{
	int* c;
	print(c);
}